<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.login.LoginActivity">

        <ImageView
            android:layout_width="650dp"
            android:layout_height="0dp"
            android:background="@drawable/background_gradient_circle"
            android:contentDescription="@string/description_gradient_background"
            app:layout_constraintBottom_toTopOf="@id/guideline1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_login"
            style="@style/TextHeadline1.White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="100dp"
            android:text="@string/label_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edit_id"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/background_edit"
            android:hint="@string/hint_id"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_login" />

        <EditText
            android:id="@+id/edit_pw"
            style="@style/TextMedium"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/background_edit"
            android:hint="@string/hint_pw"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_id" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.75" />

        <ImageButton
            android:id="@+id/btn_next"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="-40dp"
            android:background="@drawable/btn_next"
            android:contentDescription="@string/description_btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline1" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/TextMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_next" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>