<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:contentDescription="@string/description_btn_back"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tool_bar"
            style="@style/TextMedium.20"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/toolbar_title_glass_create"
            app:layout_constraintBottom_toBottomOf="@id/iv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iv_back"
            app:layout_constraintTop_toTopOf="@id/iv_back" />

        <TextView
            android:id="@+id/tv_explain"
            style="@style/TextMedium.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_explain_create_glass"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tool_bar" />


        <TextView
            android:id="@+id/tv_label_glass_name"
            style="@style/TextMedium.16.bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="50dp"
            android:text="@string/label_glass_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explain" />


        <EditText
            android:id="@+id/edit_glass_name"
            style="@style/TextMedium.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/background_edit_gray_line"
            android:hint="@string/label_glass_name"
            android:importantForAutofill="no"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_glass_name" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_finish"
            style="@style/TextMedium.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:enabled="false"
            android:text="@string/label_btn_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>