<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_menu_dot"
            app:title="@string/toolbar_title_building_create"
            app:titleTextAppearance="@style/TextMedium.20" />

        <TextView
            android:id="@+id/tv_explain"
            style="@style/TextMedium.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="16dp"
            android:text="@string/label_explain_create_building_step2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolBar" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginHorizontal="30dp"
            android:layout_marginTop="20dp"
            android:max="2"
            android:progress="2"
            android:progressBackgroundTint="@color/app_gray"
            android:progressTint="@color/app_gradient_end"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_explain" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_floor_plan"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="35dp"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            style="@style/TextMedium.16"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:enabled="false"
            android:text="@string/label_btn_finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>